# blog

./: .gitattributes  .gitignore  404.html  CNAME  README.md  astro.config.mjs  index.html  mkdocs.yaml  package.json  pyproject.toml  sitemap.xml  tsconfig.json
.github/workflows/: deploy.yml
archive/2025/: index.html
blog/: index.html
blog/archive/2025/: index.html
blog/category/hello/: index.html
blog/category/world/: index.html
category/dl/: index.html
category/ml/: index.html
category/python/: index.html
category/библиотеки/: index.html
category/портфолио/: index.html
category/теория/: index.html
docs/: index.md
docs/blog/posts/: ml.md
docs/plans/: astro-migration.md
docs/posts/: fastapi.md  ml.md  nn.md  torch.md  trees.md
scripts/posts/ml/: decision_tree_all_splits.py  decision_tree_complete.py  decision_tree_first_split.py  decision_tree_overfit.py  eda_correlation_matrix.py  eda_distributions.py  rgb_palette.py  task_clustering.py  train_test_split.py
scripts/posts/nn/: activation_relu.py  activation_sigmoid.py  dot_product_result.py  dot_product_setup.py  gradient_descent.py  (+9 more)
search/: search_index.json
src/: content.config.ts  fonts.d.ts
src/components/: Footer.astro  Header.astro  HelpfulVote.astro  Logo.astro  ReportError.astro  Search.astro
src/layouts/: Base.astro  Post.astro
src/lib/: base.ts  date.ts  ec-output.mjs  pagefind-ignore.mjs  rehype-figures.mjs  rehype-links.mjs  remark-heading-ids.mjs
src/pages/: index.astro  license.astro
src/styles/: global.css
tools/: migrate-fences.ts  port-post.ts
(+42 files in other folders)
