[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pandas-stubs~=2.3.3",
]
